--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ defusedxml==0.6.0
 entrypoints==0.3
 fasteners==0.15
 feather-format==0.4.1
+future==0.18.2
 fuzzywuzzy==0.18.0
 idna==2.9
 imageio==2.8.0
@@ -97,6 +98,7 @@ pyparsing==2.4.7
 pyrsistent==0.16.0
 python-dateutil==2.8.1
 python-editor==1.0.4
+pytorch-msssim==0.2.1
 pytz==2020.1
 PyWavelets==1.1.1
 pywin32==228
@@ -132,6 +134,9 @@ textwrap3==0.9.2
 threadpoolctl==2.0.0
 tifffile==2020.6.3
 toml==0.10.1
+torch==1.6.0
+torchsummary==1.5.1
+torchvision==0.7.0
 tornado==6.0.4
 tqdm==4.46.1
 traitlets==4.3.3
